Fixed push service which was stuck in infinite loop ( '-_-)